# Compilers

./: README.md
Lab-1-C/: README.md
Lab-1-C/src/: Makefile  interpret.c  table.c  table.h  tests.c
Lab-1-Haskell/: README.md
Lab-2-C/: aula-lab-2-c.md
Lab-2-C/tests/: input1.txt  input4.txt
Lab-2-Haskell/src/: HsLexer.hs
Lab-2-Haskell/tests/: output1.txt  output2.txt  output4.txt
Lab-3-C/src/: Makefile
Lab-3-Haskell/: parser.cabal
Lab-3-Haskell/src/: Lexer.x  Main.hs
Lab-3-Haskell/tests/: input5.txt
Lab-4-C/: README.md
Lab-4-C/tests/: output5.txt
Lab-4-Haskell/: README.md  calc.cabal
Lab-4-Haskell/src/: Lexer.x  Parser.y
Lab-4-Haskell/tests/: input4.txt
Parser-Generated/: README.md
Parser-Generated/c/: Makefile
Parser-Generated/haskell/: example.cabal
Parser-Generated/haskell/src/: Lexer.x
Pascal-0-Compiler/: README.md  trabalho.md
Pascal-0-Compiler/examples/: sumsquares.pas0
Pascal-0-Compiler/src/: AST.hs  Lexer.x  Parser.y
aula-lab-1-c-ThiagoVMarcon/: aula-lab-1-c.md
aula-lab-1-c-ThiagoVMarcon/src/: ast.c  ast.h  interpret.h
aula-lab-1-hs-ThiagoVMarcon/: aula-lab-1-hs.md  interpretador.cabal
aula-lab-1-hs-ThiagoVMarcon/src/: Interpreter.hs  Tests.hs
aula-lab-2-c-ThiagoVMarcon/: README.md
aula-lab-2-c-ThiagoVMarcon/src/: CLexer.c
aula-lab-2-c-ThiagoVMarcon/tests/: input3.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
aula-lab-2-hs-ThiagoVMarcon/: README.md  aula-lab-2-hs.md
aula-lab-2-hs-ThiagoVMarcon/tests/: input2.txt  input5.txt  output3.txt  output5.txt
aula-lab-3-c-ThiagoVMarcon/: README.md  aula-lab-3.md
aula-lab-3-c-ThiagoVMarcon/src/: lexer.x  main.c  parser.c  tokens.h
aula-lab-3-c-ThiagoVMarcon/tests/: input3.txt
aula-lab-3-hs-ThiagoVMarcon/: README.md
aula-lab-3-hs-ThiagoVMarcon/src/: Parser.hs
aula-lab-3-hs-ThiagoVMarcon/tests/: input2.txt  input4.txt
aula-lab-4-c-ThiagoVMarcon/: aula-lab-4.md
aula-lab-4-c-ThiagoVMarcon/src/: Makefile  lexer.x  main.c  parser.y
aula-lab-4-c-ThiagoVMarcon/tests/: input5.txt
aula-lab-4-hs-ThiagoVMarcon/src/: Main.hs
aula-lab-4-hs-ThiagoVMarcon/tests/: input2.txt  input3.txt  output5.txt
parser-generated/c/: lexer.x  main.c  parser.y
parser-generated/haskell/src/: Main.hs  Parser.y
trabalho-laboratorial-grupo3/: compiler.cabal  pascal0-reference.md
trabalho-laboratorial-grupo3/examples/: fact.pas0  fib.pas0  prime.pas0  sort.pas0
trabalho-laboratorial-grupo3/src/: IR.hs  Intermediate.hs  MIPSGen.hs  Main.hs  Parser.hs
