
name:                parser
version:             0.1.0.0
synopsis:            Exercícios de Compiladores (CC3001)
description:         Parser para expressões aritméticas
license:             BSD3
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable parser
  main-is:             Main.hs
  other-modules:       Lexer, Parser
  build-tools:         alex
  build-depends:       base, array
  hs-source-dirs:      src
  default-language:    Haskell2010
