
name:                compiler
version:             0.1.0.0
synopsis:            Pascal Compiler
description:         Pascal Compiler
author:              Daniel Franco and Thiago Marcon
maintainer:          email@domínio
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable compiler
  main-is:             Main.hs
  other-modules:       Lexer, Parser, AST, IR, MIPSGen
  build-tools:         alex, happy
  build-depends:       base, array, mtl, containers
  hs-source-dirs:      src
  default-language:    Haskell2010